# euchre

./: .coverage  .coveragerc  .gitignore  .pylintrc  Card.py  DevMain.py  Euchre.py  Game.py  Main.py  Player.py  README.md  TestBot.py  TestCard.py  commit_message.txt  delString.py  deleteme  history.txt  hypergraph.html  license  output.prof  pyproject.toml  readme.md  snapshot.py  test_del_string.py  tree.txt
bots/: Bot.py  T100.py
docs/: euchre.txt
euchre_project.egg-info/: PKG-INFO  SOURCES.txt
examples/: DevMain.py  DevNorm.py  Main.py  MockServer  TUI.py  client.py  combine.py  compete.py  debug.py  delete.py  delete_me.py  deleteme.py  depickle.py  dev.py  dopickle.py  game.py  json.py  main.py  oldServer.py  packaging_tutorial.code-workspace  pkg.py  server.py  single.py  snap.py  solo.py  stress.py  temp.py  test_performance.py
metrics/: ASTST.py  AttrReferenceAnalyzer.py  Test.py  cohesion.py  cohesion.py.bak  dependencies.py  disjoint.py  effects.py  hypergraph.py  list.py
test_src/: basic_game.test  maker_bug.test  squash_bugs.test  test_game.txt  test_lead.test
tests/: .py  test_bot.py  test_bot_count_suit.py  test_card.py  test_card_gpt.py  test_compare_cards.py  test_compare_cards_gpt.py  test_deal_manager.py  test_dealer_alone.py  test_deck.py  test_deck_manager.py  test_del_string.py  test_euchre.py  test_full_game.py  test_game.py  test_game.txt  test_hand.py  test_has_trump_gpt.py  test_lead.py  test_maker_bug.py  test_meta_deck.py  test_normalize_value.py  test_player_manager.py  (+12 more)
tests.bak/: test_euchre.py  test_trick_full_round_gpt.py
(+79 files in other folders)
