[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "euchre"
version = "1.3.2"
dependencies = [
    "typeguard",
    "colorama",
    "bidict",
    "pytest"
]

[project.optional-dependencies]
dev = ["pylint"]

[tool.setuptools.packages]
find = {where = ["src"]}